metadata/force-app/main/default/objects/OpportunityLineItem/fields/Allow_Product_Merge__c.field-meta.xml
<CustomField>
    <fullName>Allow_Product_Merge__c</fullName>
    <formula>Opportunity.Allow_Product_Merge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow Product Merge</label>
    <type>Checkbox</type>
</CustomField>