metadata/force-app/main/default/objects/OpportunityLineItem/fields/API_Users__c.field-meta.xml
<CustomField>
    <fullName>API_Users__c</fullName>
    <description>Used in workflow and roll-up summary to calculate the number of API users</description>
    <label>API Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>