metadata/force-app/main/default/objects/OpportunityLineItem/fields/API_Users_count__c.field-meta.xml
<CustomField>
    <fullName>API_Users_count__c</fullName>
    <formula>if(PricebookEntry.Product2.ProductCode=&apos;Restful API&apos;,Quantity,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>API Users count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>