metadata/force-app/main/default/objects/OpportunityLineItem/fields/Auto_Created__c.field-meta.xml
<CustomField>
    <fullName>Auto_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Created</label>
    <type>Checkbox</type>
</CustomField>