metadata/force-app/main/default/objects/OpportunityLineItem/fields/Block_dependent_product__c.field-meta.xml
<CustomField>
    <fullName>Block_dependent_product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-363: indicates that the product doesn&apos;t require dependent products to be added. Used in automations that add dependent products.</description>
    <label>Block dependent product?</label>
    <type>Checkbox</type>
</CustomField>