metadata/force-app/main/default/objects/OpportunityLineItem/fields/Bypass_Process__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Process</label>
    <type>Checkbox</type>
</CustomField>