metadata/force-app/main/default/objects/OpportunityLineItem/fields/Cannot_Delete_From_Package__c.field-meta.xml
<CustomField>
    <fullName>Cannot_Delete_From_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-363: Indicates whether an OLI belongs to package products that cannot be deleted or not. Used in validation rules for product configuration.
Only System Admins have access.</description>
    <label>Cannot Delete From Package</label>
    <type>Checkbox</type>
</CustomField>