metadata/force-app/main/default/objects/OpportunityLineItem/fields/Conga_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Conga_Discount_Percentage__c</fullName>
    <description>BODEV-2451 Build technical components to enable the operational process</description>
    <formula>IF(Discount_percentage__c&gt;0, ROUND(Discount_percentage__c*100, 2),0)</formula>
    <label>SpotDraft Discount Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>