metadata/force-app/main/default/objects/OpportunityLineItem/fields/Conga_Family__c.field-meta.xml
<CustomField>
    <fullName>Conga_Family__c</fullName>
    <label>Conga Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>