metadata/force-app/main/default/objects/OpportunityLineItem/fields/Conga_Family_new__c.field-meta.xml
<CustomField>
    <fullName>Conga_Family_new__c</fullName>
    <formula>Text (PricebookEntry.Product2.Conga_Family__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Family</label>
    <type>Text</type>
</CustomField>