metadata/force-app/main/default/objects/OpportunityLineItem/fields/Conga_Package_Subscription_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Conga_Package_Subscription_Calculation__c</fullName>
    <description>BODEV-2180 Update the table format in Order Form</description>
    <formula>IF(AND(TEXT(Conga_Show_Package_Discount_Opportunity__c)=&quot;Yes&quot;,ListPrice &gt;= Default_Price__c,ListPrice &gt;= UnitPrice),
ROUND((Quantity * List_Price_ARR_One_off__c),2),

IF(AND(TEXT(Conga_Show_Package_Discount_Opportunity__c)=&quot;Yes&quot;, Default_Price__c &gt;= ListPrice ,Default_Price__c &gt;= UnitPrice),
ROUND((Quantity * Default_Price_ARR__c),2),

IF(AND(TEXT(Conga_Show_Package_Discount_Opportunity__c)=&quot;Yes&quot;, UnitPrice &gt;= ListPrice ,UnitPrice &gt;= Default_Price__c),
ROUND((Quantity * Sales_Price_ARR__c),2),

IF(AND(TEXT(Conga_Show_Package_Discount_Opportunity__c)=&quot;No&quot;, Default_Price__c &gt;= UnitPrice),
ROUND((Quantity * Default_Price_ARR__c),2),

IF(AND(TEXT(Conga_Show_Package_Discount_Opportunity__c)=&quot;No&quot;, UnitPrice &gt; Default_Price__c),
ROUND((Quantity * Sales_Price_ARR__c),2),0
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Package Subscription MRR/One-off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>