metadata/force-app/main/default/objects/OpportunityLineItem/fields/Conga_Previous_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Conga_Previous_Contract_Price__c</fullName>
    <description>BODEV - 2680 Build - Min Commit controls</description>
    <formula>Original_Price_ARR_OneOff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Previous Contract Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>