metadata/force-app/main/default/objects/OpportunityLineItem/fields/Conga_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Conga_Product_Type__c</fullName>
    <description>BODEV 2681 - Build - Renewal Agreement</description>
    <formula>IF(
AND(
Part_of_a_package__c = TRUE,
ISPICKVAL(PricebookEntry.Product2.Product_Type__c,&quot;Add-on&quot;)
),&quot;Included&quot;, 

IF(
AND(
Part_of_a_package__c = TRUE,
ISPICKVAL(PricebookEntry.Product2.Product_Type__c,&quot;Integrations &amp; Add-ons&quot;)
),&quot;Integrations&quot;, 

TEXT(PricebookEntry.Product2.Product_Type__c)))</formula>
    <label>Conga Product Type</label>
    <type>Text</type>
</CustomField>