metadata/force-app/main/default/objects/OpportunityLineItem/fields/Conga_Project_Module_Duration__c.field-meta.xml
<CustomField>
    <fullName>Conga_Project_Module_Duration__c</fullName>
    <description>BODEV-2180 Update the table format in Order Form</description>
    <label>Conga Project/Module Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>