metadata/force-app/main/default/objects/OpportunityLineItem/fields/Conga_Show_Package_Discount_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Conga_Show_Package_Discount_Opportunity__c</fullName>
    <description>BODEV-2180 Update the table format in Order Form</description>
    <label>Conga Show Package Discount Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>