metadata/force-app/main/default/objects/OpportunityLineItem/fields/Conga_Total_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Conga_Total_Sales_Price__c</fullName>
    <description>BODEV-2180 Update the table format in Order Form</description>
    <formula>Total_Sales_Price_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>