metadata/force-app/main/default/objects/OpportunityLineItem/fields/Conga_Transactional_Quantity_NUM__c.field-meta.xml
<CustomField>
    <fullName>Conga_Transactional_Quantity_NUM__c</fullName>
    <description>BODEV-2180 Update the table format in Order Form</description>
    <formula>IF(
    OR(
    For_Renewal__c = FALSE,
    ISPICKVAL(PricebookEntry.Product2.Product_Type__c, &quot;Users &amp; Storage&quot;), 
    PricebookEntry.Product2.Product_ID_18_digits__c = &apos;01t0P000002FJq7QAG&apos;,
    PricebookEntry.Product2.Product_ID_18_digits__c = &apos;01t3g000000S23XAAS&apos;,
    PricebookEntry.Product2.Product_ID_18_digits__c = &apos;01t3g000000kQx4AAE&apos;,
    PricebookEntry.Product2.Product_ID_18_digits__c = &apos;01t3g000000SKDQAA4&apos;,
    PricebookEntry.Product2.Product_ID_18_digits__c = &apos;01t3g000000SKDVAA4&apos;,
    PricebookEntry.Product2.Product_ID_18_digits__c = &apos;01tRo000005REVRIA4&apos; /* CI-Hub Figma Users */
    ),
    Quantity,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpotDraft Transactional Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>