metadata/force-app/main/default/objects/OpportunityLineItem/fields/Contract_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Contract_IsActive__c</fullName>
    <formula>Opportunity.Contract_IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract IsActive</label>
    <type>Checkbox</type>
</CustomField>