metadata/force-app/main/default/objects/OpportunityLineItem/fields/Contraction_ARR__c.field-meta.xml
<CustomField>
    <fullName>Contraction_ARR__c</fullName>
    <description>BODEV-2718: Returns Contraction ARR value for this product line, except for Renewal Opps. Contraction on Renewal is recognised in Contraction_ARR_on_Renewal__c field due to the compiled size.</description>
    <formula>IF(
    /* Contraction can be shown only on Recurring Product under Won Opp */
    AND(
        ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;),
        For_Renewal__c = TRUE
    ),
    IF(
        /* Negative ARR on Upsell or Expansion Portal */
        AND(
            ISPICKVAL(Opportunity.Type, &quot;Existing Business-Upsell&quot;) ||
            ISPICKVAL(Opportunity.Type, &quot;New Business - Expansion Portal&quot;),
            Total_Sales_Price_ARR__c &lt; 0
        ),
        - Total_Sales_Price_ARR__c,
        /* Contraction on Platform Transfer or OEM&gt;Direct Transfer */
        IF(
            AND(
                /* Contraction recognised only when ARR before Transfer is specified
                and the line item ARR is less than Previous OEM ARR for the line item */
                ISPICKVAL(Opportunity.Type, &quot;Existing Business - Internal Transfer&quot;)||
                ISPICKVAL(Opportunity.Type, &quot;Existing Business - Platform Transfer&quot;),
                Opportunity.Original_Renewal_ARR__c &gt; 0,
                Previous_OEM_ARR__c != 0,
                Total_Sales_Price_ARR__c &lt; Previous_OEM_ARR__c
            ),
            Previous_OEM_ARR__c - Total_Sales_Price_ARR__c,
            NULL
        )
    ),
    NULL
)</formula>
    <inlineHelpText>Contraction ARR of the line item, excluding Contraction on Renewal (which can be found in Contraction ARR on Renewal field).</inlineHelpText>
    <label>Contraction ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>