metadata/force-app/main/default/objects/OpportunityLineItem/fields/Default_Price__c.field-meta.xml
<CustomField>
    <fullName>Default_Price__c</fullName>
    <description>Indicates the price of the product. Can be lower than List Price for packaged products.</description>
    <label>Default Price</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>