metadata/force-app/main/default/objects/OpportunityLineItem/fields/Default_Price_ARR__c.field-meta.xml
<CustomField>
    <fullName>Default_Price_ARR__c</fullName>
    <description>Returns Default Price - ARR for the product.</description>
    <formula>IF(Term__c &gt; 0,
Default_Price__c * 12,
Default_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>