metadata/force-app/main/default/objects/OpportunityLineItem/fields/Default_Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>Default_Price_Discount__c</fullName>
    <description>Indicates the discount from the List Price. For example, if Default Price is the same as List Price, than the discount is 0%.</description>
    <formula>IF(ListPrice = 0, 0, (ListPrice - Default_Price__c) / ListPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Price Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>