metadata/force-app/main/default/objects/OpportunityLineItem/fields/Discount_Amount_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_ARR_One_off__c</fullName>
    <description>Returns ARR Discount Amount for this opportunity product.</description>
    <formula>IF( For_Renewal__c = True,
Discount_Amount__c * 12,
Discount_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount - ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>