metadata/force-app/main/default/objects/OpportunityLineItem/fields/Discount_Amount_From_Default__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_From_Default__c</fullName>
    <description>Indicates the package discount: difference between List Price and Default price.</description>
    <formula>IF(Default_Price__c &lt; ListPrice,
0,
(Default_Price__c - ListPrice) * Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount (From Default)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>