metadata/force-app/main/default/objects/OpportunityLineItem/fields/Discount_Amount_RA__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount_RA__c</fullName>
    <description>BODEV-2681 Build - Renewal Agreement</description>
    <formula>IF( AND( Quantity &gt; 0,Conga_Total_Sales_Price__c &lt; ( Total_Initial_Default_Price_ARR_One_off__c +  Cumulative_Indexation_amount__c +  Upcoming_Indexation_amount__c +  Renewal_Uplift_amount__c)),Conga_Total_Sales_Price__c - ( Total_Initial_Default_Price_ARR_One_off__c +  Cumulative_Indexation_amount__c +  Upcoming_Indexation_amount__c +  Renewal_Uplift_amount__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount - RA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>