metadata/force-app/main/default/objects/OpportunityLineItem/fields/Discount_percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_percentage__c</fullName>
    <formula>IF(Default_Price__c = 0, 
0, 
IF(UnitPrice &gt; Default_Price__c, 0,
( Default_Price__c  - UnitPrice) / Default_Price__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>