metadata/force-app/main/default/objects/OpportunityLineItem/fields/Discount_rounded__c.field-meta.xml
<CustomField>
    <fullName>Discount_rounded__c</fullName>
    <formula>ROUND(Discount_percentage__c *100, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount rounded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>