metadata/force-app/main/default/objects/OpportunityLineItem/fields/Expansion_ARR_on_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Expansion_ARR_on_Renewal__c</fullName>
    <description>BODEV-2718: Formula to return Expansion ARR on Renewal. Expansion field has to be split because of too long compiled size.</description>
    <formula>IF(
    /* Expansion can be shown only on Recurring Product under Won Opp */
    AND(
        ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;),
        For_Renewal__c = TRUE,
        ISPICKVAL(Opportunity.Type, &quot;Existing Business-Renewal&quot;)
    ),
    MAX(
        /* Expansion value never below 0 */
        0,
        /*
            Price increase from expired discount from the previoius contract
            Applicable only when Initial Default Price ARR/One-off is specified
        */
        (
            IF(ISBLANK(Initial_Default_Price_ARR_One_off__c), 0, (Initial_Default_Price_ARR_One_off__c - Original_Price_ARR_OneOff__c) * Quantity) +
            /*
                Manual increase on top of the base price after pricing factors are applied,
                otherwise manual discount beyond Renewal Uplift amount could offset wiht the increase from expired discount
                When Initial Default Price ARR/One-off is blank, it is alternated with Oriignal Price ARR/One-off.
            */
            IF(
                /*

                */
                Renewal_Base_Total_Price_ARR__c - Total_Sales_Price_ARR__c &lt;= Renewal_Uplift_amount__c + Indexation_Discount_Allowance__c,
                MAX(
                    0,
                    Total_Sales_Price_ARR__c - Renewal_Base_Total_Price_ARR__c + MIN(0, Renewal_Uplift_amount__c + Indexation_Discount_Allowance__c)
                ),
                -MAX(
                    0,
                    Renewal_Base_Total_Price_ARR__c - Total_Sales_Price_ARR__c - Renewal_Uplift_amount__c - Indexation_Discount_Allowance__c
                )
            )
        )
    ),
    NULL
)</formula>
    <label>Expansion ARR on Renewal</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>