metadata/force-app/main/default/objects/OpportunityLineItem/fields/For_Renewal__c.field-meta.xml
<CustomField>
    <fullName>For_Renewal__c</fullName>
    <formula>PricebookEntry.Product2.For_Contract_Renewals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>For Renewal</label>
    <type>Checkbox</type>
</CustomField>