metadata/force-app/main/default/objects/OpportunityLineItem/fields/For_Renewal_Mapped__c.field-meta.xml
<CustomField>
    <fullName>For_Renewal_Mapped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value is mapped from &apos;For Renewal&apos; field using flow</description>
    <inlineHelpText>Value is mapped from &apos;For Renewal&apos; field using flow</inlineHelpText>
    <label>For Renewal Mapped</label>
    <type>Checkbox</type>
</CustomField>