metadata/force-app/main/default/objects/OpportunityLineItem/fields/Has_Unlimited_Limit__c.field-meta.xml
<CustomField>
    <fullName>Has_Unlimited_Limit__c</fullName>
    <formula>PricebookEntry.Product2.Has_Unlimited_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Unlimited Limit</label>
    <type>Checkbox</type>
</CustomField>