metadata/force-app/main/default/objects/OpportunityLineItem/fields/Included_in_renewal__c.field-meta.xml
<CustomField>
    <fullName>Included_in_renewal__c</fullName>
    <formula>IF(AND(Product_ID__c=&quot;01t0P000002EGGlQAO&quot;,ISPICKVAL(Recurring_Discount__c, &quot;No&quot;)),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Included in renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>