metadata/force-app/main/default/objects/OpportunityLineItem/fields/Indexation_Discount_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Indexation_Discount_Allowance__c</fullName>
    <description>BODEV-2718, BODEV-2760: Formula to return the discount allowance on indexation. Upcoming indexation can be discounted up to minimum 2% without recognising Contraction.</description>
    <formula>IF(
    /*
        When Upcoming Indexation is applied and it is more than 2%,
        The excess above 2% is the discount allowance.
    */
    AND(
        Pricing_factors_applied_on_OLI__c,
        NOT(ISBLANK( Opportunity.Applied_Upcoming_Indexation__c )),
        Opportunity.Applied_Upcoming_Indexation__c &gt; 0.02
    ),
    (
        /*
            In general the factor is applied to Initial Default Price,
            but when it&apos;s blank, use Previous Contract Price instead
        */
        IF(
            ISBLANK(Initial_Default_Price_ARR_One_off__c),
            Original_Price_ARR_OneOff__c,
            Initial_Default_Price_ARR_One_off__c
        ) * Quantity
        + Cumulative_Indexation_amount__c
    ) * ( Opportunity.Applied_Upcoming_Indexation__c - 0.02 ),
    0
)</formula>
    <label>Indexation Discount Allowance</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>