metadata/force-app/main/default/objects/OpportunityLineItem/fields/Initial_Default_Price_ARR_One_off__c.field-meta.xml
<CustomField>
    <fullName>Initial_Default_Price_ARR_One_off__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to store the default price of the OLI on creation.</description>
    <label>Initial Default Price ARR/One-off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>