metadata/force-app/main/default/objects/OpportunityLineItem/fields/Initial_Purchased_Price_ARR__c.field-meta.xml
<CustomField>
    <fullName>Initial_Purchased_Price_ARR__c</fullName>
    <description>BODEV-2680 Build - Min Commit controls
Field to track Initial Purchased Price ARR of products</description>
    <label>Initial Purchased Price ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>