metadata/force-app/main/default/objects/OpportunityLineItem/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <description>Returns the name of the integration that the original product is related to.</description>
    <formula>PricebookEntry.Product2.Integration__c</formula>
    <label>Integration</label>
    <type>Text</type>
</CustomField>